--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="profile-card">
-            <img src="Images/Sample_image.jpeg" alt="Profile Picture" class="profile-picture">
+            <img src="Images/profile_image.jpeg" alt="Profile Picture" class="profile-picture">
             <h1>Iorhee Saviour</h1>
             <p class="address">Makurdi, Beneu State, Nigeria</p>
             <p class="profile">"Back-end developer and Data Analyst."</p>
